Fixes LUGG-741 : Adding 16px spacing below tabs

--- a/suitcase_interim/css/suitcase.css
+++ b/suitcase_interim/css/suitcase.css
@@ -2413,3 +2413,7 @@ footer {
     -moz-osx-font-smoothing: grayscale;
     -o-font-smoothing: antialiased;
 }
+
+.region-content-inner>.tabs {
+    margin-bottom: 16px;
+}
